# splasher

./: .fpm  .gitignore  .pylintrc  README.md  package.sh  pyproject.toml  requirements.txt  setup.py  splasher.desktop  splasher.spec
resources/: icons.qrc
resources/icons/: icons.qrc
splasher/: main.py
splasher/config/: __init__.py  args.py  folders_creator.py
splasher/config/log/: dev_log.json  log.json  log_initiator.py
splasher/config/settings/: settings_arg_getter.py  settings_arg_setter.py  settings_creator.py
splasher/downloader/: __init__.py  area_detector.py  downloader.py  preview_fetcher.py  wallpaper_downloader.py  wallpaper_setter.py
splasher/gui/: application.py  icons_rc.py  main_window.py  settings_window.py  system_tray.py
src/: app.py  main.py
src/config/: __init__.py  app_initiator.py  args.py  create_folders.py  env.py  folders_creator.py  init_app.py  init_log.py  log.json  log.py  log.yaml  setup.py  setup_env.py
src/config/log/: __init__.py  init_log.py  log.json  log_initiator.py
src/config/settings/: __init__.py  create_settings.py  get_settings_arg.py  set_settings_arg.py  settings_arg_getter.py
src/downloader/: __init__.py  area_detector.py  image_downloader.py  preview_fetcher.py  set_wallpaper_kde.sh  wallpaper_downloader.py  wallpaper_setter.py
src/gui/: __init__.py  application.py  icons.py  icons_rc.py  main_window.py  settings_window.py  system_tray.py
src/utils/: env.py  global_variables.py
tests/config/: folders_creator_test.py
tests/config/settings/: settings_arg_getter_test.py  settings_arg_setter_test.py  (+1 more)
